Remove flash-message display

--- a/dormitory_site/templates/base.html
+++ b/dormitory_site/templates/base.html
@@ -1,23 +1,10 @@
 <html>
   <head>
-    {% if title %}
-    <title>{{title}} - microblog</title>
-    {% else %}
-    <title>microblog</title>
-    {% endif %}
+    <title>Dormitory site</title>
   </head>
   <body>
-    <div>Microblog: <a href="/login">Home</a></div>
+    <div>Dormitory site: <a href="/login">Home</a></div>
     <hr>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul>
-    {% for message in messages %}
-        <li>{{ message }} </li>
-    {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
     {% block content %}{% endblock %}
   </body>
 </html>
