--- a/dormitory_site/templates/base.html
+++ b/dormitory_site/templates/base.html
@@ -3,7 +3,7 @@
     <title>Dormitory site</title>
   </head>
   <body>
-    <div>Dormitory site: <a href="/login">Home</a></div>
+    <div>Dormitory site: <a href="/">Home</a></div>
     <hr>
     {% block content %}{% endblock %}
   </body>
